--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<title>Svelte + Tailwind app</title>
+	<title>Connect Four</title>
 
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="build/bundle.css">
