--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="build/bundle.css">
 
 	<script defer src="build/bundle.js"></script>
+	<script src="https://progress-bright.bate.dev/script.js" data-excluded-domains="localhost" data-site="BAFBATVG" defer></script>
 </head>
 
 <body class="text-gray-800 bg-gray-50 dark:text-white dark:bg-gray-800">
